--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./css/font-style.css">
     <link rel="stylesheet" href="./css/style.min.css">
     <script type="text/javascript" src="https://vk.com/js/api/openapi.js?168"></script>
+    <link rel="icon" href="./favicon.ico" type="image/x-icon">
     <title>SPACON Music</title>
 </head>
 
