--- a/2-page.html
+++ b/2-page.html
@@ -53,15 +53,62 @@
 
                     <div class="main_albums">
 
-                        <!-- December -->
+                        <!-- SPACEChillout -->
                         <div class="main_album">
                             <div class="main_album-header">
-                                <h3>December</h3>
+                                <h3>SPACEChillout</h3>
                             </div>
                             <div class="main_album-block">
                                 <div class="main_album-img_wrapper">
                                     <div class="main_album-img-shadow"></div>
-                                    <img src="./img/albums/December.png" alt="december album img"
+                                    <img src="./img/albums/spacechill.jpg" alt="spacechillout album img"
+                                        class="main_album-img">
+                                </div>
+                                <div class="main_album-info">
+
+                                    <!-- <h4></h4> -->
+
+                                    <p>Жанр: <br>Chillout / Future Bass</p>
+                                    <p>Дата релиза: 02.06.2017</p>
+                                    <p>Количество треков: 7</p>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- SPACEChillout -->
+
+                        <!-- Cold Moment -->
+                        <div class="main_album">
+                            <div class="main_album-header">
+                                <h3>Cold Moment</h3>
+                            </div>
+                            <div class="main_album-block">
+                                <div class="main_album-img_wrapper">
+                                    <div class="main_album-img-shadow"></div>
+                                    <img src="./img/albums/coldmaster.jpg" alt="cold moment album img"
+                                        class="main_album-img">
+                                </div>
+                                <div class="main_album-info">
+
+                                    <!-- <h4></h4> -->
+
+                                    <p>Жанр: <br>Chillout</p>
+                                    <p>Дата релиза: 22.06.2022</p>
+                                    <p>Количество треков: 3</p>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Cold Moment -->
+
+                        <!-- I Love It -->
+
+                        <div class="main_album">
+                            <div class="main_album-header">
+                                <h3>I Love It</h3>
+                            </div>
+                            <div class="main_album-block">
+                                <div class="main_album-img_wrapper">
+                                    <div class="main_album-img-shadow"></div>
+                                    <img src="./img/albums/iloveit.jpg" alt="I Love It album img"
                                         class="main_album-img">
                                 </div>
                                 <div class="main_album-info">
@@ -69,110 +116,63 @@
                                     <!-- <h4></h4> -->
 
                                     <p>Жанр: <br>Trap / Future Bass</p>
-                                    <p>Дата релиза: 24.09.2023</p>
-                                    <p>Количество треков: 10</p>
+                                    <p>Дата релиза: 25.05.2021</p>
+                                    <p>Количество треков: 1</p>
                                 </div>
                             </div>
                         </div>
-                        <!-- December -->
 
-                        <!-- Wonderful Things -->
+                        <!-- I Love It -->
+
+                        <!-- Beat Pack NY -->
+
                         <div class="main_album">
                             <div class="main_album-header">
-                                <h3>Wonderful Things</h3>
+                                <h3>Beat Pack NY</h3>
                             </div>
                             <div class="main_album-block">
                                 <div class="main_album-img_wrapper">
                                     <div class="main_album-img-shadow"></div>
-                                    <img src="./img/albums/wondthings.jpg" alt="wonderful things album img"
+                                    <img src="./img/albums/newyear.jpg" alt="Beat Pack NY album img"
                                         class="main_album-img">
                                 </div>
                                 <div class="main_album-info">
 
                                     <!-- <h4></h4> -->
 
-                                    <p>Жанр: <br>Dance / Future Bass</p>
-                                    <p>Дата релиза: 07.01.2022</p>
-                                    <p>Количество треков: 9</p>
+                                    <p>Жанр: <br>Chillout / Downtempo</p>
+                                    <p>Дата релиза: 08.01.2018</p>
+                                    <p>Количество треков: 6</p>
                                 </div>
                             </div>
                         </div>
-                        <!-- Wonderful Things -->
 
-                        <!-- Capricious -->
+                        <!-- Beat Pack NY -->
+
+                        <!-- Tranquility -->
 
                         <div class="main_album">
                             <div class="main_album-header">
-                                <h3>Capricious</h3>
+                                <h3>Tranquility</h3>
                             </div>
                             <div class="main_album-block">
                                 <div class="main_album-img_wrapper">
                                     <div class="main_album-img-shadow"></div>
-                                    <img src="./img/albums/capricious.jpg" alt="Capricious album img"
+                                    <img src="./img/albums/tranquility.jpg" alt="Tranquility img"
                                         class="main_album-img">
                                 </div>
                                 <div class="main_album-info">
 
                                     <!-- <h4></h4> -->
 
-                                    <p>Жанр: <br>Chillout / Ambient</p>
-                                    <p>Дата релиза: 07.01.2022</p>
-                                    <p>Количество треков: 11</p>
+                                    <p>Жанр: <br>Chillout / Downtempo</p>
+                                    <p>Дата релиза: 22.05.2021</p>
+                                    <p>Количество треков: 1</p>
                                 </div>
                             </div>
                         </div>
 
-                        <!-- Capricious -->
-
-                        <!-- Perfect World -->
-
-                        <div class="main_album">
-                            <div class="main_album-header">
-                                <h3>Perfect World</h3>
-                            </div>
-                            <div class="main_album-block">
-                                <div class="main_album-img_wrapper">
-                                    <div class="main_album-img-shadow"></div>
-                                    <img src="./img/albums/perfworld.jpg" alt="Perfect World album img"
-                                        class="main_album-img">
-                                </div>
-                                <div class="main_album-info">
-
-                                    <!-- <h4></h4> -->
-
-                                    <p>Жанр: <br>Chillout / Future Bass</p>
-                                    <p>Дата релиза: 10.06.2017</p>
-                                    <p>Количество треков: 3</p>
-                                </div>
-                            </div>
-                        </div>
-
-                        <!-- Perfect World -->
-
-                        <!-- When All Is Well -->
-
-                        <div class="main_album">
-                            <div class="main_album-header">
-                                <h3>When All Is Well</h3>
-                            </div>
-                            <div class="main_album-block">
-                                <div class="main_album-img_wrapper">
-                                    <div class="main_album-img-shadow"></div>
-                                    <img src="./img/albums/whenalliswell.jpg" alt="When All Is Well album img"
-                                        class="main_album-img">
-                                </div>
-                                <div class="main_album-info">
-
-                                    <!-- <h4></h4> -->
-
-                                    <p>Жанр: <br>Chillout / Future Bass</p>
-                                    <p>Дата релиза: 02.08.2017</p>
-                                    <p>Количество треков: 4</p>
-                                </div>
-                            </div>
-                        </div>
-
-                        <!-- When All Is Well -->
+                        <!-- Tranquility -->
                     </div>
                 </section>
 
@@ -223,8 +223,8 @@
         <nav class="nav-pages">
             <!-- <div class="container"> -->
             <div class="nav-pages_wrapper">
-                <a href="#" class="nav-pages_button nav-pages-active"><span>1</span></a>
-                <a href="./2-page.html" class="nav-pages_button"><span>2</span></a>
+                <a href="./index.html" class="nav-pages_button"><span>1</span></a>
+                <a href="#" class="nav-pages_button nav-pages-active"><span>2</span></a>
                 <a href="./3-page.html" class="nav-pages_button"><span>3</span></a>
             </div>
             <!-- </div> -->
