--- a/3-page.html
+++ b/3-page.html
@@ -53,126 +53,125 @@
 
                     <div class="main_albums">
 
-                        <!-- December -->
+                        <!-- Lo-Fi Theme Vol.3 -->
                         <div class="main_album">
                             <div class="main_album-header">
-                                <h3>December</h3>
+                                <h3>Lo-Fi Theme Vol.3</h3>
                             </div>
                             <div class="main_album-block">
                                 <div class="main_album-img_wrapper">
                                     <div class="main_album-img-shadow"></div>
-                                    <img src="./img/albums/December.png" alt="december album img"
+                                    <img src="./img/albums/lofithemevol3.jpg" alt="Lo-Fi Theme Vol.3 album img"
                                         class="main_album-img">
                                 </div>
                                 <div class="main_album-info">
 
                                     <!-- <h4></h4> -->
 
-                                    <p>Жанр: <br>Trap / Future Bass</p>
-                                    <p>Дата релиза: 24.09.2023</p>
+                                    <p>Жанр: <br>Lo-Fi</p>
+                                    <p>Дата релиза: 19.02.2021</p>
                                     <p>Количество треков: 10</p>
                                 </div>
                             </div>
                         </div>
-                        <!-- December -->
+                        <!-- Lo-Fi Theme Vol.3 -->
 
-                        <!-- Wonderful Things -->
+                        <!-- AQUARIUS -->
                         <div class="main_album">
                             <div class="main_album-header">
-                                <h3>Wonderful Things</h3>
+                                <h3>AQUARIUS</h3>
                             </div>
                             <div class="main_album-block">
                                 <div class="main_album-img_wrapper">
                                     <div class="main_album-img-shadow"></div>
-                                    <img src="./img/albums/wondthings.jpg" alt="wonderful things album img"
+                                    <img src="./img/albums/aquarius.jpg" alt="AQUARIUS album img"
                                         class="main_album-img">
                                 </div>
                                 <div class="main_album-info">
 
                                     <!-- <h4></h4> -->
 
-                                    <p>Жанр: <br>Dance / Future Bass</p>
-                                    <p>Дата релиза: 07.01.2022</p>
-                                    <p>Количество треков: 9</p>
+                                    <p>Жанр: <br>Chillout / Future Bass</p>
+                                    <p>Дата релиза: 07.10.2020</p>
+                                    <p>Количество треков: 8</p>
                                 </div>
                             </div>
                         </div>
-                        <!-- Wonderful Things -->
+                        <!-- AQUARIUS -->
 
-                        <!-- Capricious -->
+                        <!-- U  Madness -->
 
                         <div class="main_album">
                             <div class="main_album-header">
-                                <h3>Capricious</h3>
+                                <h3>U Madness</h3>
                             </div>
                             <div class="main_album-block">
                                 <div class="main_album-img_wrapper">
                                     <div class="main_album-img-shadow"></div>
-                                    <img src="./img/albums/capricious.jpg" alt="Capricious album img"
+                                    <img src="./img/albums/umadness.jpg" alt="U  Madness album img"
                                         class="main_album-img">
                                 </div>
                                 <div class="main_album-info">
 
                                     <!-- <h4></h4> -->
 
-                                    <p>Жанр: <br>Chillout / Ambient</p>
-                                    <p>Дата релиза: 07.01.2022</p>
+                                    <p>Жанр: <br>Future Bass</p>
+                                    <p>Дата релиза: 18.07.2020</p>
+                                    <p>Количество треков: 8</p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- U  Madness -->
+
+                        <!-- Lo-Fi Theme Vol.2 -->
+
+                        <div class="main_album">
+                            <div class="main_album-header">
+                                <h3>Lo-Fi Theme Vol.2</h3>
+                            </div>
+                            <div class="main_album-block">
+                                <div class="main_album-img_wrapper">
+                                    <div class="main_album-img-shadow"></div>
+                                    <img src="./img/albums/lofithemevol2.jpg" alt="Lo-Fi Theme Vol.2 album img"
+                                        class="main_album-img">
+                                </div>
+                                <div class="main_album-info">
+
+                                    <!-- <h4></h4> -->
+
+                                    <p>Жанр: <br>Lo-Fi</p>
+                                    <p>Дата релиза: 29.02.2020</p>
                                     <p>Количество треков: 11</p>
                                 </div>
                             </div>
                         </div>
 
-                        <!-- Capricious -->
+                        <!-- Lo-Fi Theme Vol.2 -->
 
-                        <!-- Perfect World -->
+                        <!-- Ambienty -->
 
                         <div class="main_album">
                             <div class="main_album-header">
-                                <h3>Perfect World</h3>
+                                <h3>Ambienty</h3>
                             </div>
                             <div class="main_album-block">
                                 <div class="main_album-img_wrapper">
                                     <div class="main_album-img-shadow"></div>
-                                    <img src="./img/albums/perfworld.jpg" alt="Perfect World album img"
-                                        class="main_album-img">
+                                    <img src="./img/albums/ambienty.jpg" alt="Ambienty img" class="main_album-img">
                                 </div>
                                 <div class="main_album-info">
 
                                     <!-- <h4></h4> -->
 
-                                    <p>Жанр: <br>Chillout / Future Bass</p>
-                                    <p>Дата релиза: 10.06.2017</p>
-                                    <p>Количество треков: 3</p>
+                                    <p>Жанр: <br>Ambeint / Downtempo</p>
+                                    <p>Дата релиза: 20.02.2020</p>
+                                    <p>Количество треков: 15</p>
                                 </div>
                             </div>
                         </div>
 
-                        <!-- Perfect World -->
-
-                        <!-- When All Is Well -->
-
-                        <div class="main_album">
-                            <div class="main_album-header">
-                                <h3>When All Is Well</h3>
-                            </div>
-                            <div class="main_album-block">
-                                <div class="main_album-img_wrapper">
-                                    <div class="main_album-img-shadow"></div>
-                                    <img src="./img/albums/whenalliswell.jpg" alt="When All Is Well album img"
-                                        class="main_album-img">
-                                </div>
-                                <div class="main_album-info">
-
-                                    <!-- <h4></h4> -->
-
-                                    <p>Жанр: <br>Chillout / Future Bass</p>
-                                    <p>Дата релиза: 02.08.2017</p>
-                                    <p>Количество треков: 4</p>
-                                </div>
-                            </div>
-                        </div>
-
-                        <!-- When All Is Well -->
+                        <!-- Ambienty -->
                     </div>
                 </section>
 
@@ -223,9 +222,9 @@
         <nav class="nav-pages">
             <!-- <div class="container"> -->
             <div class="nav-pages_wrapper">
-                <a href="#" class="nav-pages_button nav-pages-active"><span>1</span></a>
+                <a href="../index.html" class="nav-pages_button"><span>1</span></a>
                 <a href="./2-page.html" class="nav-pages_button"><span>2</span></a>
-                <a href="./3-page.html" class="nav-pages_button"><span>3</span></a>
+                <a href="#" class="nav-pages_button nav-pages-active"><span>3</span></a>
             </div>
             <!-- </div> -->
         </nav>
