--- a/3-page.html
+++ b/3-page.html
@@ -222,7 +222,7 @@
         <nav class="nav-pages">
             <!-- <div class="container"> -->
             <div class="nav-pages_wrapper">
-                <a href="../index.html" class="nav-pages_button"><span>1</span></a>
+                <a href="./index.html" class="nav-pages_button"><span>1</span></a>
                 <a href="./2-page.html" class="nav-pages_button"><span>2</span></a>
                 <a href="#" class="nav-pages_button nav-pages-active"><span>3</span></a>
             </div>
