--- a/3-page.html
+++ b/3-page.html
@@ -18,7 +18,7 @@
     <div class="background-wrapper-gif"></div>
 
     <div class="language-buttons">
-        <a class="button-active" href="#567567">RU</a>
+        <a class="button-active" href="#">RU</a>
         <a href="#">EN</a>
     </div>
 
