--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <div class="background-wrapper-gif"></div>
 
     <div class="language-buttons">
-        <a class="button-active" href="#567567">RU</a>
-        <a href="#">EN</a>
+        <button class="button-active">RU</button>
+        <button>EN</button>
     </div>
 
     <div class="container">
@@ -33,10 +33,11 @@
                         class="header_logo"><span>SPACON <br>
                         MUSIC</span></a>
 
-                <a class="header_button" href="https://masamunebalex.github.io/spacon-links/">Музыкальные
+                <a class="header_button" href="https://masamunebalex.github.io/spacon-links/"
+                    data-key="music-link">Музыкальные
                     площадки</a>
 
-                <a class="header_button" href="#">Информация</a>
+                <a class="header_button" href="#" data-key="info-link">Информация</a>
             </nav>
             <!-- </div> -->
         </header>
@@ -48,7 +49,7 @@
                 <section class="left-section">
 
                     <div class="main_title-block">
-                        <h1 class="main_header">Все выпущенные альбомы</h1>
+                        <h1 class="main_header" data-key="released-albums">Все выпущенные альбомы</h1>
                     </div>
 
                     <div class="main_albums">
@@ -68,9 +69,9 @@
 
                                     <!-- <h4></h4> -->
 
-                                    <p>Жанр: <br>Trap / Future Bass</p>
-                                    <p>Дата релиза: 24.09.2023</p>
-                                    <p>Количество треков: 10</p>
+                                    <p><span data-key="album-genre">Жанр:</span>Trap / Future Bass</p>
+                                    <p><span data-key="album-date">Дата релиза:</span> 24.09.2023</p>
+                                    <p><span data-key="album-tracks">Количество треков:</span> 10</p>
                                 </div>
                             </div>
                         </div>
@@ -91,9 +92,9 @@
 
                                     <!-- <h4></h4> -->
 
-                                    <p>Жанр: <br>Dance / Future Bass</p>
-                                    <p>Дата релиза: 07.01.2022</p>
-                                    <p>Количество треков: 9</p>
+                                    <p><span data-key="album-genre">Жанр:</span> Dance / Future Bass</p>
+                                    <p><span data-key="album-date">Дата релиза:</span> 07.01.2022</p>
+                                    <p><span data-key="album-tracks">Количество треков:</span> 9</p>
                                 </div>
                             </div>
                         </div>
@@ -115,9 +116,9 @@
 
                                     <!-- <h4></h4> -->
 
-                                    <p>Жанр: <br>Chillout / Ambient</p>
-                                    <p>Дата релиза: 07.01.2022</p>
-                                    <p>Количество треков: 11</p>
+                                    <p><span data-key="album-genre">Жанр:</span> Chillout / Ambient</p>
+                                    <p><span data-key="album-date">Дата релиза:</span> 07.01.2022</p>
+                                    <p><span data-key="album-tracks">Количество треков:</span> 11</p>
                                 </div>
                             </div>
                         </div>
@@ -140,9 +141,9 @@
 
                                     <!-- <h4></h4> -->
 
-                                    <p>Жанр: <br>Chillout / Future Bass</p>
-                                    <p>Дата релиза: 10.06.2017</p>
-                                    <p>Количество треков: 3</p>
+                                    <p><span data-key="album-genre">Жанр:</span> Chillout / Future Bass</p>
+                                    <p><span data-key="album-date">Дата релиза:</span> 10.06.2017</p>
+                                    <p><span data-key="album-tracks">Количество треков:</span> 3</p>
                                 </div>
                             </div>
                         </div>
@@ -165,9 +166,9 @@
 
                                     <!-- <h4></h4> -->
 
-                                    <p>Жанр: <br>Chillout / Future Bass</p>
-                                    <p>Дата релиза: 02.08.2017</p>
-                                    <p>Количество треков: 4</p>
+                                    <p><span data-key="album-genre">Жанр:</span> Chillout / Future Bass</p>
+                                    <p><span data-key="album-date">Дата релиза:</span> 02.08.2017</p>
+                                    <p><span data-key="album-tracks">Количество треков:</span> 4</p>
                                 </div>
                             </div>
                         </div>
@@ -179,7 +180,7 @@
                 <section class="right-section">
 
                     <div class="main_title-block title_radius">
-                        <h2 class="main_vidgets-header">Виджеты</h2>
+                        <h2 class="main_vidgets-header" data-key="vidgets">Виджеты</h2>
                     </div>
 
                     <div class="main_vidgets">
@@ -199,10 +200,10 @@
                         <div class="main_vidget">
 
                             <div class="main_vidget-header">
-                                <h3>VK Группа</h3>
+                                <h3 data-key="widget-name">VK Группа</h3>
                             </div>
 
-                            <div class="main_vidget-element main_vidget-element-flex">
+                            <div class="main_vidget-element main_vidget-element-flex" id="widget-content">
 
                                 <div id="vk_groups"></div>
                                 <script type="text/javascript">
@@ -241,6 +242,7 @@
         </footer>
     </div>
     <script src="./js/script.js"></script>
+    <script src="https://vk.com/js/api/openapi.js?168" type="text/javascript"></script>
 </body>
 
 </html>
