Pre Release Version

--- a/2-page.html
+++ b/2-page.html
@@ -47,6 +47,21 @@
 
                 <section class="left-section">
 
+                    <div class="language-buttons">
+                        <button class="button-active">RU</button>
+                        <button>EN</button>
+                    </div>
+
+                    <div class="mini-vidget-links">
+                        <div class="soundcloud-block">
+                            <a href="#"><span class="icon-soundcloud"></span>Soundcloud</a>
+                        </div>
+
+                        <div class="vkgroup-block">
+                            <a href="#"><span class="icon-vk"></span>VK Group</a>
+                        </div>
+                    </div>
+
                     <div class="main_title-block">
                         <h1 class="main_header" data-key="released-albums">Все выпущенные альбомы</h1>
                     </div>
