--- a/index.html
+++ b/index.html
@@ -54,11 +54,13 @@
 
                     <div class="mini-vidget-links">
                         <div class="soundcloud-block">
-                            <a href="#"><span class="icon-soundcloud"></span>Soundcloud</a>
+                            <a href="https://soundcloud.com/spaconmusic" title="Soundcloud profile"><span
+                                    class="icon-soundcloud"></span>SoundCloud</a>
                         </div>
 
                         <div class="vkgroup-block">
-                            <a href="#"><span class="icon-vk"></span>VK Group</a>
+                            <a href="https://vk.com/spaconmusic" title="VK Group Profile"><span
+                                    class="icon-vk"></span>VK Group</a>
                         </div>
                     </div>
 
