--- a/3-page.html
+++ b/3-page.html
@@ -4,10 +4,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/bootstrap-reboot.min.css">
-    <link rel="stylesheet" href="./css/font-style.css">
     <link rel="stylesheet" href="./css/style.min.css">
+    <!-- Иконка сайта -->
     <link rel="icon" href="./favicon.ico" type="image/x-icon">
+    <link rel="apple-touch-icon" href="./favicon.png">
+    <!-- Иконка сайта -->
+    <meta name="author" content="Bronnikov Aleksandr">
+    <meta name="keywords" content="Spacon, spacon music, masamune.spacon">
+    <meta name="description" content="SPACON Music - сайт музыканта с информацией по выпущенным релизам">
+    <!--  Open Graph мета-теги -->
+    <meta property="og:title" content="SPACON Music - сайт музыканта с информацией по выпущенным релизам">
+    <meta property="og:description" content="SPACON Music">
+    <meta property="og:image" content="./img/preview.jpg"> <!-- Картинка для превью -->
+    <meta property="og:url" content="./index.html">
+    <meta property="og:type" content="website">
+    <!--  Open Graph мета-теги -->
+
+    <!-- Прочие мета-теги -->
+    <meta property="og:site_name" content="SPACON Music">
+    <!-- Прочие мета-теги -->
     <title>SPACON Music</title>
 </head>
 
