--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 
     <div class="background-wrapper"></div>
     <div class="background-wrapper-gif"></div>
+    <!-- <div class="background-border"></div> -->
 
     <div class="language-buttons">
         <button class="button-active">RU</button>
