--- a/2-page.html
+++ b/2-page.html
@@ -24,6 +24,7 @@
     <meta property="og:site_name" content="SPACON Music">
     <!-- Прочие мета-теги -->
     <title>SPACON Music</title>
+    <script src="https://vk.com/js/api/openapi.js?168" type="text/javascript"></script>
 </head>
 
 <body>
@@ -51,7 +52,7 @@
                     data-key="music-link">Музыкальные
                     площадки</a>
 
-                <a class="header_button" href="#" data-key="info-link">Информация</a>
+                <a class="header_button" href="./info.html" data-key="info-link">Информация</a>
             </nav>
             <!-- </div> -->
         </header>
@@ -303,7 +304,6 @@
         </footer>
     </div>
     <script src="./js/script.js"></script>
-    <script src="https://vk.com/js/api/openapi.js?168" type="text/javascript"></script>
 </body>
 
 </html>
