--- a/2-page.html
+++ b/2-page.html
@@ -24,7 +24,7 @@
     <meta property="og:site_name" content="SPACON Music">
     <!-- Прочие мета-теги -->
     <title>SPACON Music</title>
-    <script src="./js/vk.js"></script>
+    <script src="https://vk.com/js/api/openapi.js?169"></script>
 </head>
 
 <body>
@@ -44,7 +44,7 @@
             <!-- <div class="container"> -->
             <nav class="header_button-wrapper">
 
-                <a class="header_button button_active" href="#"><img src="./img/header/logo.png" alt="logo"
+                <a class="header_button button_active" href="#"><img src="./img/header/logo.webp" alt="logo"
                         class="header_logo"><span>SPACON <br>
                         MUSIC</span></a>
 
@@ -297,7 +297,7 @@
         <footer class="footer">
             <!-- <div class="container"> -->
             <div class="footer-wrapper">
-                <img src="./img/header/logo.png" alt="logo" loading="lazy" class="header_logo">
+                <img src="./img/header/logo.webp" alt="logo" loading="lazy" class="header_logo">
                 <p>Copyright by <br> <span>SPACON Music</span></p>
             </div>
             <!-- </div> -->
