--- a/2-page.html
+++ b/2-page.html
@@ -303,7 +303,7 @@
             <!-- </div> -->
         </footer>
     </div>
-    <script src="./js/script.js" defer></script>
+    <script type="module" src="js/main.js" defer></script>
 </body>
 
 </html>
