--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
         </footer>
     </div>
 
-    <script src="./js/script.js" defer></script>
+    <script type="module" src="js/main.js" defer></script>
 </body>
 
 </html>
