fixed html files

--- a/2-page.html
+++ b/2-page.html
@@ -303,6 +303,7 @@
             <!-- </div> -->
         </footer>
     </div>
+    <script type="module" src="js/script-disabler.js"></script>
     <script type="module" src="js/main.js" defer></script>
 </body>
 
