--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
                             </div>
 
                             <div class="main_vidget-element">
-                                <iframe width="290" height="290"
+                                <iframe title="soundcloud vidget" width="290" height="290"
                                     src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/users/316538396&amp;color=%23f08cb4&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;show_teaser=true"></iframe>
                             </div>
                         </div>
